# protein-design

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
protein-design/: __init__.py  dataset.py  features.py  plots.py
protein-design/modeling/: predict.py  train.py
