[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "protein-design"
version = "0.0.1"
description = "A Data Science project for designing proteins"
authors = [
  { name = "Miron Petrik Popovic" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["protein-design"]
include = ["pyproject.toml", "protein-design/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["protein-design"]
force-sort-within-sections = true

